[package]
name = "mel_filter"
version = "0.2.0"
authors = ["Wonway Song <sww4718168@163.com>"]
edition = "2018"
description = "Mel bank filter, Same as `librosa.filters.mel`."
documentation = "https://docs.rs/mel-filter"
repository = "https://github.com/songww/mel-filter"
homepage = "https://github.com/songww/mel-filter"
license = "MIT"
keywords = ["mel", "mel_filter", "mel_bank_filter", "librosa"]
categories = ["multimedia::audio", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
itertools-num = "0.1"
ndarray = { version = "0.14", optional = true }
tch = { version = "0.3", optional = true }

[features]
default = []
torch = [ "tch" ]
